--- a/project.ipynb
+++ b/project.ipynb
@@ -478,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wow, it's statistically significant! The p-value is less than 0.05, so we can reject the null hypothesis that there is no relationship between the pause rate and the proficiency level of the speaker. In fact, Pearson correlation coeficient (R) = -0.59 indicates that there is a negative correlation between the two."
+    "### It's statistically significant with the p-value less than 0.05, so we can reject the null hypothesis that there is no relationship between the pause rate and the proficiency level of the speaker. In fact, Pearson correlation coeficient (R) = -0.59 indicates that there is a negative correlation between the two."
    ]
   },
   {
